--- a/index.html
+++ b/index.html
@@ -10,12 +10,14 @@
     <div class="app-container">
         <h1>Weather App</h1>
         <form id="search-form">
-            <input type="text" id="city-input" placeholder="ค้นหาชื่อเมือง..." required>
-            <button type="submit">ค้นหา</button>
+            <input type="text" id="city-input" placeholder="Location.." required>
+            <button type="submit">Search</button>
         </form>
         <div id="weather-info-container" class="weather-info">
             <!-- ข้อมูลสภาพอากาศจะแสดงที่นี่ -->
         </div>
+        <div id="weather-info-container" class="weather-info"></div>_
+        <div id="forecast-container"></div>
     </div>
     <script src="script.js"></script>
 </body>
